# Class-Generator

./: .gitignore  ClassGenerator.drawio
Diagrams/: ClassGenerator.drawio  ClassGeneratorClassDiagram.drawio  ClassGeneratorComponentDiagram.drawio  gui_class_diagram.drawio
Examples/INI_Examples/: Parser.cpp  TestingINI.cpp  conf.ini  main.cpp
Examples/XML_Examples/Example1/: CMakeLists.txt  GeneratedClass.cpp  Important_Note.txt  Parser.cpp  intermediate_gui_file.json  main.cpp  xml_file.xml
src/BasicFile/: BasicFile.cpp
src/ClassGenerator/: makefile
src/ClassGenerator/headers/: ClassGenerator.h  FormattableString.h  literals.h
src/ClassGenerator/sources/: ClassGenerator.cpp  FormattableString.cpp  literals.cpp
src/GUI/: ClassGenerator.pro  main.cpp
src/GUI/IntermediateFormatExamples/: ex1.json  ex2.json
src/GUI/assets/: resources.qrc  resources_rc.py
src/GUI/forms/: mainwindow.ui  mainwindow_ui.py
src/GUI/headers/: Config.h  IntermediateFormatHandler.h  MainWindow.h  StateHandler.h  TreeEditor.h  TreeParser.h  rootconfig.h
src/GUI/sources/: Config.cpp  IntermediateFormatHandler.cpp  MainWindow.cpp  StateHandler.cpp  TreeEditor.cpp  TreeParser.cpp  rootconfig.cpp
src/Generated Class Examples/Example1/: main.cpp  myclass.cpp  myclass.hpp  parser.cpp  parser.hpp  parser_lib.hpp
src/UserClassGenerator/: user_literals.cpp  user_literals.h
src/XMLClassGenerator/: makefile
src/controller/: controller.cpp  controller.h
src/iniClassGenerator/: CMakeLists.txt  CodeGeneratorINI.cpp  CodeGeneratorINI.h  example.ini  fileWriter.h  main.cpp
(+17 files in other folders)
